# examples

./: .gitignore  CLAUDE.md  NEXT_SESSION.md  README.md  mkdocs.yml
.github/workflows/: pages.yml
calculus-agent/: .template-info  CLAUDE.md  Containerfile  Makefile  README.md  agent.yaml  identity.md  pyproject.toml
calculus-agent/chart/: Chart.yaml  values.yaml
calculus-agent/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  route.yaml  service.yaml
calculus-agent/prompts/: system.md
calculus-agent/src/: agent.py
calculus-agent/tests/: test_example_agent.py
calculus-agent/tools/: code_executor.py
calculus-coordinator/: .template-info  AGENTS.md  CLAUDE.md  Containerfile  Makefile  agent.yaml  pyproject.toml  redeploy.sh
calculus-coordinator/chart/: Chart.yaml  values.yaml
calculus-coordinator/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  route.yaml  service.yaml
calculus-coordinator/prompts/: system.md
calculus-coordinator/src/: agent.py
calculus-coordinator/tests/: test_llm.py  test_memory.py  test_template_render.py
calculus-helper/: .template-info  ARCHITECTURE.md  README.md  TOOLS_PLAN.md  pyproject.toml  requirements.txt
calculus-helper/src/: calc.py
docs/: 00-prerequisites.md  01-scaffold-agent.md  02-configure-and-deploy.md  03-build-mcp-server.md  04-wire-mcp-to-agent.md  05-gateway-and-ui.md  06-code-sandbox.md  06-extend-with-ai.md  07-extend-with-ai.md  07-secrets-and-production.md  08-secrets-and-production.md  09-file-uploads.md  10-guardrails-and-observability.md  11-scaling-with-llm-d.md  index.md  where-next.md
docs/guides/: install-ogx.md  (+8 more)
(+43 files in other folders)
